# ai-coach-chat-app

./: LICENSE  README.md
backend/: .env.example  Dockerfile  pyproject.toml  stream_chat_app.db
backend/app/: main.py
backend/app/api/routes/: ai.py  auth.py
backend/app/core/: config.py  database.py  memory_manager.py  models.py  stream_client.py
backend/app/routers/: auth.py
backend/app/schemas/: ai.py  auth.py
backend/app/services/: auth_service.py
backend/app/services/ai/: helpers.py  memory_service.py  openai_agent.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  PrivateRoute.jsx
frontend/src/components/auth/: Login.jsx  Register.jsx
frontend/src/contexts/: AuthContext.jsx  StreamChatContext.jsx
